--- a/HTMLMVC Link/Views/Design/Index.cshtml
+++ b/HTMLMVC Link/Views/Design/Index.cshtml
@@ -24,10 +24,10 @@
                     <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
                         <ul class="navbar-nav  ">
                             <li class="nav-item active">
-                                <a class="nav-link" href="index.html">
+                                @*<a class="nav-link" href="index.html">
                                     Home <span class="sr-only">(current)</span>
-                                </a>
-                            </li>
+                                </a>*@
+@*                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html"> About </a>
                             </li>
@@ -36,7 +36,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html"> Contact us</a>
-                            </li>
+                            </li>*@
                         </ul>
                     </div>
                 </div>
