--- a/HTMLMVC Link/Views/Design/Index.cshtml
+++ b/HTMLMVC Link/Views/Design/Index.cshtml
@@ -651,14 +651,14 @@
                                 the
                                 middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined
                             </p>
-                            <img src="images/quote.png" alt="">
+                            <img src="~/images/envelope-white.png" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="client_container layout_padding">
                         <div class="img-box">
-                            <img src="images/client.png" alt="">
+                            <img src="~/images/logo.png" alt="">
                         </div>
                         <div class="detail-box">
                             <h4>
@@ -826,10 +826,10 @@
 <!-- end info_section -->
 <!-- footer section -->
 <section class="container-fluid footer_section">
-    <p>
+   @* <p>
         &copy; 2019 All Rights Reserved By
         <a href="https://html.design/">Free Html Templates</a>
-    </p>
+    </p>*@
 </section>
 <!-- footer section -->
 
