--- a/HTMLMVC Link/Views/Design/Program.cshtml
+++ b/HTMLMVC Link/Views/Design/Program.cshtml
@@ -481,12 +481,12 @@
 
 <!-- end info_section -->
 <!-- footer section -->
-<section class="container-fluid footer_section">
+@*<section class="container-fluid footer_section">
     <p>
         &copy; 2019 All Rights Reserved By
         <a href="https://html.design/">Free Html Templates</a>
     </p>
-</section>
+</section>*@
 <!-- footer section -->
 
 <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
