--- a/HTMLMVC Link/Views/Shared/_Layout.cshtml
+++ b/HTMLMVC Link/Views/Shared/_Layout.cshtml
@@ -34,10 +34,10 @@
                     <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
                         <ul class="navbar-nav  ">
                             @*<li class="nav-item ">
-                                <a class="nav-link" href="index.html">
-                                    Home <span class="sr-only">(current)</span>
-                                </a>
-                            </li>*@
+            <a class="nav-link" href="index.html">
+                Home <span class="sr-only">(current)</span>
+            </a>
+        </li>*@
                             <li class="nav-item active">
                                 <a class="nav-link" asp-controller="design" asp-action="Index"> Home </a>
                             </li>
@@ -53,6 +53,10 @@
                             <li class="nav-item active">
                                 <a class="nav-link" asp-controller="design" asp-action="Contact"> Contact </a>
                             </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" asp-controller="Product" asp-action="ProductList"> Products </a>
+                            </li>
+
                         </ul>
                     </div>
                 </div>
@@ -67,9 +71,9 @@
     </div>*@
 
     <section class="container-fluid footer_section">
-        <p>
+        <p>@*
             &copy; 
-            <a href="https://html.design/"> HelloBrighton</a>
+*@            <a href="https://html.design/"> HelloBrighton</a>
         </p>
     </section>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
