--- a/HTMLMVC Link/Views/Shared/_Layout.cshtml
+++ b/HTMLMVC Link/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                                 <a class="nav-link" asp-controller="design" asp-action="Contact"> Contact </a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" asp-controller="Product" asp-action="ProductList"> Products </a>
+                                <a class="nav-link" asp-controller="Product" asp-action="List"> Products </a>
                             </li>
 
                         </ul>
