--- a/HTMLMVC Link/Views/Product/ProductList.cshtml
+++ b/HTMLMVC Link/Views/Product/ProductList.cshtml
@@ -7,13 +7,19 @@
 <h1>ViListew</h1>
 
 <p>
-    <a asp-action="ProductList">Create New</a>
+    <a asp-action="Insert">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Productid)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.ProductName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ProductType)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Quantity)
@@ -31,7 +37,13 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.Productid)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.ProductName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductType)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Quantity)
@@ -42,10 +54,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.ProductCode)
             </td>
+
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { Productid = item.Productid }) |
+                @Html.ActionLink("Details", "Details", new { Productid = item.Productid }) |
+                @Html.ActionLink("Delete", "Delete", new { Productid = item.Productid })
             </td>
         </tr>
 }
