--- a/HTMLMVC Link/Views/Product/Insert.cshtml
+++ b/HTMLMVC Link/Views/Product/Insert.cshtml
@@ -9,9 +9,10 @@
 @*<h4>ProductModel</h4>
 *@<hr />
 <div class="row">
+
     <div class="col-md-4">
 
-        <form asp-action="Create">
+        <form asp-action="Insert">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ProductName" class="control-label"></label>
@@ -23,7 +24,7 @@
                 <select class="form-control" asp-for="Type" asp-items="@(new SelectList(Model.ProductType,"ProductTypeId","ProductType"))">
                     <option>--Select ProductType--</option>
                 </select>
-                <span asp-validation-for="ProductType" class="text-danger"></span>
+                <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
