--- a/HTMLMVC Link/Views/Product/UpdateProduct.cshtml
+++ b/HTMLMVC Link/Views/Product/UpdateProduct.cshtml
@@ -18,6 +18,13 @@
                 <span asp-validation-for="ProductName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Type" class="control-label"></label>
+                <select class="form-control" asp-for="Type" asp-items="@(new SelectList(Model.ProductType,"ProductTypeId","ProductType"))">
+                    <option>--Select ProductType--</option>
+                </select>
+                <span asp-validation-for="ProductType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
                 <input asp-for="Quantity" class="form-control" />
                 <span asp-validation-for="Quantity" class="text-danger"></span>
