--- a/HTMLMVC Link/Views/Product/DeleteProduct.cshtml
+++ b/HTMLMVC Link/Views/Product/DeleteProduct.cshtml
@@ -45,6 +45,6 @@
     
     <form asp-action="Remove">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="List">Back to List</a>
     </form>
 </div>
