--- a/HTMLMVC Link/Views/Product/Insert.cshtml
+++ b/HTMLMVC Link/Views/Product/Insert.cshtml
@@ -20,8 +20,8 @@
                 <span asp-validation-for="ProductName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
-                <select class="form-control" asp-for="Type" asp-items="@(new SelectList(Model.ProductType,"ProductTypeId","ProductType"))">
+                <label asp-for="ProductType" class="control-label"></label>
+                <select class="form-control" asp-for="ProductType" asp-items="@(new SelectList(Model.Type,"ProductTypeId","ProductType"))">
                     <option>--Select ProductType--</option>
                 </select>
                 <span asp-validation-for="Type" class="text-danger"></span>
