--- a/HTMLMVC Link/Views/Product/Details.cshtml
+++ b/HTMLMVC Link/Views/Product/Details.cshtml
@@ -49,6 +49,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new { Productid = Model.Productid }) |
     <a asp-action="List">Back to List</a>
 </div>
