--- a/HTMLMVC Link/Views/Product/UpdateProduct.cshtml
+++ b/HTMLMVC Link/Views/Product/UpdateProduct.cshtml
@@ -13,6 +13,11 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Productid"  type="hidden"  class="control-label"></label>
+                <input asp-for="Productid"  class="form-control" />
+                <span asp-validation-for="Productid"  type="hidden" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ProductName" class="control-label"></label>
                 <input asp-for="ProductName" class="form-control" />
                 <span asp-validation-for="ProductName" class="text-danger"></span>
