--- a/HTMLMVC Link/Views/MultipleView/_listpartial.cshtml
+++ b/HTMLMVC Link/Views/MultipleView/_listpartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<ClassLibrary.Model.ProductModel>
 
-<p>
+@*<p>
     <a asp-action="Create">Create New</a>
-</p>
+</p>*@
 <table class="table">
     <thead>
         <tr>
@@ -49,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.ProductCode)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { Productid = item.Productid }) |
+                @Html.ActionLink("Details", "Details", new { Productid = item.Productid }) |
+                @Html.ActionLink("Delete", "Delete", new { Productid = item.Productid  })
             </td>
         </tr>
 }
