--- a/HTMLMVC Link/Views/Shared/_Layout.cshtml
+++ b/HTMLMVC Link/Views/Shared/_Layout.cshtml
@@ -12,6 +12,8 @@
     <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
     <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
 
+    <link href="~/lib/datatables/css/dataTables.bootstrap4.css" rel="stylesheet" />
+
 
 
 
@@ -90,7 +92,8 @@
     <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
     <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
     <script src="~/lib/select2/js/select2.min.js"></script>
-
+    <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+   
 
     <script src="~/js/site.js" asp-append-version="true"></script>
 
